--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <div id='clock'></div>
 
+    <div id="alarm"></div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="app/script.js"></script>
 
